# hxy

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  flake.nix  mise.toml  rust-toolchain.toml
crates/egui-palette/: Cargo.toml  README.md
crates/egui-palette/src/: fuzzy.rs  lib.rs
crates/egui_dock_picker/: Cargo.toml  README.md
crates/egui_dock_picker/src/: lib.rs
crates/egui_minimap/: Cargo.toml  README.md
crates/egui_minimap/src/: lib.rs
crates/hxy/: Cargo.toml  Trunk.toml  index.html
crates/hxy-010-lang/: Cargo.toml
crates/hxy-010-lang/examples/: bench_pair.rs  probe_corpus.rs  probe_failures.rs  run_bt.rs
crates/hxy-010-lang/fixtures/: LICENSES.md
crates/hxy-010-lang/src/: ast.rs  fuzz.rs  interp.rs  lexer.rs  lib.rs  parser.rs  source.rs  token.rs  value.rs
crates/hxy-010-lang/tests/: corpus_features.rs  interp_basics.rs  lexer_snapshots.rs  parser_snapshots.rs
crates/hxy-010-lang/tests/snapshots/: interp_basics__big_endian_reads_inverse_bytes.snap  interp_basics__char_array_becomes_string.snap  interp_basics__char_array_becomes_string.snap.new  interp_basics__function_call_returns_value.snap  interp_basics__if_else_branches_on_magic.snap  interp_basics__reads_primitive_fields_little_endian.snap  interp_basics__typedef_enum_resolves_variant_name.snap  interp_basics__typedef_struct_with_nested_fields.snap  interp_basics__warning_emits_diagnostic.snap  interp_basics__while_loop_reads_until_eof.snap  lexer_snapshots__assets_bin_bt.snap  lexer_snapshots__float_literals.snap  lexer_snapshots__identifiers_and_keywords.snap  lexer_snapshots__integer_literals.snap  lexer_snapshots__line_and_block_comments.snap  lexer_snapshots__operators_and_punctuation.snap  lexer_snapshots__recctrl_bt.snap  lexer_snapshots__sample_bt_full_file.snap  lexer_snapshots__string_and_char_literals.snap  lexer_snapshots__typedef_enum_block.snap  lexer_snapshots__typedef_struct_with_attributes.snap  lexer_snapshots__unexpected_char_reports_offset.snap  lexer_snapshots__while_loop_with_calls.snap  parser_snapshots__arithmetic_precedence.snap  parser_snapshots__assets_bin_bt_fixture.snap  parser_snapshots__assignment_right_associative.snap  parser_snapshots__comparison_and_logical.snap  parser_snapshots__compound_assign_and_index.snap  parser_snapshots__expr_stmt_literal.snap  parser_snapshots__field_decl_array_with_attrs.snap  parser_snapshots__field_decl_simple.snap  parser_snapshots__for_loop.snap  parser_snapshots__function_def_with_ref_param.snap  parser_snapshots__if_else_chain.snap  parser_snapshots__local_var_with_init.snap  parser_snapshots__member_and_call.snap  parser_snapshots__recctrl_bt_fixture.snap  (+7 more)
crates/hxy-app/: Cargo.toml
crates/hxy-app/assets/: bt-runtime.component.wasm
crates/hxy-app/src/: app.rs  builtin_runtimes.rs  command_palette.rs  commands.rs  copy_format.rs  file.rs  inspector.rs  lib.rs  main.rs  menu.rs  plugins_tab.rs  settings.rs  state.rs  tabs.rs  template_library.rs  template_panel.rs  vfs_panel.rs  wasm.rs  window.rs
crates/hxy-calculator/: Cargo.toml
crates/hxy-calculator/src/: eval.rs  lib.rs  parser.rs
crates/hxy-calculator/tests/: snapshots.rs
crates/hxy-core/: Cargo.toml
crates/hxy-core/src/: cache.rs  error.rs  geometry.rs  lib.rs  patched.rs  selection.rs  source.rs
crates/hxy-i18n/: Cargo.toml
crates/hxy-i18n/src/: lib.rs
crates/hxy-imhex-lang/: Cargo.toml
crates/hxy-imhex-lang/examples/: bc_compile_survey.rs  bc_parity_sweep.rs  bencode_wallclock.rs  diff_run.rs  dump_bc.rs  probe_ast.rs  probe_bc.rs  probe_hexpat_corpus.rs  probe_hexpat_failures.rs  probe_hexpat_paired.rs  probe_one.rs
crates/hxy-imhex-lang/src/: ast.rs  bc.rs  imports.rs  interp.rs  lexer.rs  lib.rs  parser.rs  source.rs  token.rs  value.rs
crates/hxy-imhex-lang/tests/: bc_corpus_compile.rs  bc_parity.rs  interp_basics.rs  parser_basics.rs  phase2_features.rs  phase3_imports.rs  phase4_templates.rs  png_smoke.rs  upstream_corpus.rs  visualizer_attrs.rs
crates/hxy-plugin-api/: Cargo.toml
crates/hxy-plugin-api/src/: lib.rs
crates/hxy-plugin-host/: Cargo.toml  wit
crates/hxy-plugin-host/src/: bindings.rs  commands.rs  fs_impl.rs  grants.rs  handler.rs  host.rs  lib.rs  manifest.rs  registry.rs  state_store.rs  template.rs  token.rs
crates/hxy-plugin-host/tests/: bt_runtime.rs  passthrough_roundtrip.rs  png_template.rs  template_roundtrip.rs  test_statecmd_roundtrip.rs  xbox_neighborhood.rs
crates/hxy-plugin-host/wit/: world.wit
crates/hxy-vfs/: Cargo.toml
crates/hxy-vfs/src/: capabilities.rs  error.rs  handler.rs  lib.rs  registry.rs  tab_source.rs
crates/hxy-view/: Cargo.toml
crates/hxy-view/src/: editor.rs  input.rs  lib.rs  vim.rs
crates/hxy-view/tests/: interaction.rs
crates/hxy/migrations/: 001_init.sql  002_plugin_state.sql
crates/hxy/src/: app.rs  background.rs  builtin_runtimes.rs  cli.rs  command_palette.rs  commands.rs  compare.rs  copy_format.rs  file.rs  global_search.rs  goto.rs  inspector.rs  ipc.rs  lib.rs  main.rs  menu.rs  pane_pick.rs  paste.rs  patch_persist.rs  persisted_dock.rs  plugin_runner.rs  plugins_tab.rs  search.rs  search_bar.rs  settings.rs  shortcuts.rs  state.rs  style.rs  tabs.rs  template_library.rs  template_panel.rs  toasts.rs  vfs_panel.rs  wasm.rs  wasm_app.rs  wasm_blob_source.rs  window.rs
crates/hxy/tests/: imhex_color_pipeline.rs  visualizer_pipeline.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/lang_parser/: sample.bt
fuzz/fuzz_targets/: lang_interpreter.rs  lang_lexer.rs  lang_parser.rs  lang_structured.rs
plugins/bt-runtime/: Cargo.toml
plugins/bt-runtime/src/: lib.rs
plugins/fixture-template/: Cargo.toml
plugins/fixture-template/src/: lib.rs
plugins/passthrough/: Cargo.toml
plugins/passthrough/src/: lib.rs
plugins/png-template/: Cargo.toml
plugins/png-template/src/: lib.rs
plugins/test-statecmd/: Cargo.toml
plugins/test-statecmd/src/: lib.rs
plugins/udmp/: Cargo.toml  hxy_udmp_plugin.hxy.toml
plugins/udmp/src/: lib.rs
plugins/xbox-neighborhood/: Cargo.toml  hxy_xbox_neighborhood.hxy.toml
plugins/xbox-neighborhood/src/: lib.rs
(+144 files in other folders)
