[workspace]
resolver = "3"
members = [
    "crates/hxy-core",
    "crates/hxy-i18n",
    "crates/hxy-view",
    "crates/hxy-vfs",
    "crates/hxy-app",
    "crates/hxy-plugin-host",
    "crates/hxy-plugin-api",
    "crates/hxy-010-lang",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
authors = ["Lander Brandt"]
repository = "https://github.com/landaire/hxy"

[workspace.dependencies]
hxy-core = { path = "crates/hxy-core" }
hxy-i18n = { path = "crates/hxy-i18n" }
hxy-view = { path = "crates/hxy-view" }
hxy-vfs = { path = "crates/hxy-vfs" }
hxy-plugin-host = { path = "crates/hxy-plugin-host" }
hxy-plugin-api = { path = "crates/hxy-plugin-api" }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 2

[profile.profiling]
inherits = "release"
debug = true
