[package]
name = "egui-palette"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "A Cmd+P-style command palette widget for egui: fuzzy filter, keyboard nav, modal popup."
readme = "README.md"
keywords = ["egui", "palette", "fuzzy"]
categories = ["gui"]

[dependencies]
egui = "0.34.1"
nucleo-matcher = "0.3.1"
