[package]
name = "hxy-010-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "010 Editor Binary Template language: lexer, parser, interpreter."

[features]
default = []
# Derive `Arbitrary` on the AST so the fuzz crate can generate
# syntactically well-formed programs without having to hand-roll
# generators. Off by default because it pulls in the arbitrary
# crate and adds proc-macro time to downstream consumers.
arbitrary = ["dep:arbitrary"]

[dependencies]
arbitrary = { version = "1", features = ["derive"], optional = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
hxy-imhex-lang = { workspace = true }
insta = { workspace = true }
