[package]
name = "hxy-calculator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Tiny arithmetic calculator for byte-offset / length expressions: hex + decimal numbers, binary / decimal unit suffixes, implicit close parens."

[dependencies]
thiserror = { workspace = true }
winnow = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
