[package]
name = "hxy-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core types and file abstractions for the hxy hex editor"

[dependencies]
fskit = { workspace = true, features = ["jiff"] }
jiff = { workspace = true }
lru = "0.18.0"
rootcause = "0.12.1"
rustc-hash = { workspace = true }
serde = { workspace = true }
suture = { workspace = true }
thiserror = { workspace = true }
vfs = { workspace = true }
