[package]
name = "hxy-imhex-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ImHex pattern language: lexer, parser, interpreter."

[dependencies]
thiserror = "2.0.18"
winnow = "0.7"
rustc-hash = "2.1"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }
