[package]
name = "hxy-imhex-lang"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "ImHex pattern language: lexer, parser, interpreter."

[dependencies]
thiserror = { workspace = true }
winnow = { workspace = true }
rustc-hash = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
