[package]
name = "hxy-plugin-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Guest-side wit-bindgen types for writing hxy plugins (VFS handler + template runtime)."

[dependencies]
wit-bindgen = "0.57.1"
