[package]
name = "hxy-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wasmtime-based host for hxy plugins (byte source, VFS handler, template runtime)."

[dependencies]
hxy-core = { workspace = true }
hxy-vfs = { workspace = true }
base64 = "0.22.1"
getrandom = "0.3.4"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
thiserror = "2.0.18"
toml = "0.9.12"
tracing = "0.1.44"
vfs = "0.13.0"
wasmtime = { version = "44", features = ["component-model", "runtime", "cranelift"] }

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.13.0"
