[package]
name = "hxy-plugin-host"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Wasmtime-based host for hxy plugins (byte source, VFS handler, template runtime)."

[dependencies]
hxy-core = { workspace = true }
hxy-vfs = { workspace = true }
base64 = { workspace = true }
getrandom = "0.3.4"
serde = { workspace = true }
sha2 = "0.10.9"
thiserror = { workspace = true }
toml = "0.9.12"
tracing = { workspace = true }
vfs = { workspace = true }
wasmtime = { version = "44", features = ["component-model", "runtime", "cranelift"] }
wasmtime-wasi = "44"

[dev-dependencies]
serde_json = "1.0.145"
tempfile = "3.13.0"
