[package]
name = "hxy-vfs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VFS detection, registry, and built-in handlers for the hxy hex editor"

[dependencies]
file_type = "0.8.11"
fskit = { workspace = true }
hxy-core = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
vfs = { workspace = true }
zip = { version = "8.5.1", default-features = false, features = ["deflate", "deflate64"] }
