[package]
name = "hxy-view"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Reusable egui hex-view widget"

[dependencies]
egui = "0.34.1"
hxy-core = { workspace = true }
serde = { version = "1.0.228", features = ["derive"], optional = true }
suture = { version = "0.2.0", path = "../../../suture", optional = true }
thiserror = { version = "2.0.18", optional = true }
tracing = { version = "0.1.44", optional = true }

[features]
default = ["editor"]
# Enables the full HexEditor editing surface: patch overlay, undo/redo,
# hex/ASCII keystroke input, and the cursor navigation dispatcher.
# Disabling leaves the lightweight renderer + selection/hover
# interaction only -- useful for strict read-only viewers that don't
# want to pull in `suture`.
editor = ["dep:suture", "dep:thiserror", "dep:tracing"]
# Implements Serialize/Deserialize on EditEntry (and any other
# persistent editor types) so consumers can round-trip undo history
# through their own storage layer. Requires `editor`; pulls `serde`
# and turns on `suture/serde`.
serde = ["dep:serde", "editor", "suture?/serde"]
# Pull in `dhat` + `egui_kittest` so the `hexview_dhat` profiling
# example can swap in dhat::Alloc as the global allocator and drop a
# heap profile after a synthetic frame loop. Off by default; enable
# with `cargo run -p hxy-view --example hexview_dhat --features
# dhat-bench --release`. Lives as `[[example]]` rather than `[[bin]]`
# so it doesn't compete with the hxy binary for `cargo run`'s
# default-package selection.
dhat-bench = ["dep:dhat", "dep:egui_kittest"]

[dev-dependencies]
egui_kittest = "0.34.1"

[dependencies.dhat]
version = "0.3.3"
optional = true

[dependencies.egui_kittest]
version = "0.34.1"
optional = true

[[example]]
name = "hexview_dhat"
path = "bin/hexview_dhat.rs"
required-features = ["editor", "dhat-bench"]
