[package]
name = "hxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "hxy hex editor: desktop and web GUI for inspecting binary files."
readme = "README.md"
keywords = ["hex", "editor", "gui"]
categories = ["gui"]

[[bin]]
name = "hxy"
path = "src/main.rs"
required-features = ["desktop"]

# Lib target uses a distinct Rust crate name so the bin can
# `use hxy_lib::...` without colliding with its own target name.
# Having `[lib]` and `[[bin]]` share a name forces cargo to build
# two separate dep graphs, which ends up compiling `tokio` twice
# with different metadata and producing "two different versions of
# crate `tokio`" errors when the bin passes a lib-owned type back.
[lib]
name = "hxy_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = ["dep:tokio", "dep:sqlx", "dep:tracing-subscriber", "eframe/wayland"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:web-sys", "dep:js-sys", "dep:tracing-wasm", "dep:tracing-subscriber"]

[dependencies]
# Internal crates
hxy-core = { workspace = true }
hxy-i18n = { workspace = true }
hxy-view = { workspace = true, features = ["serde"] }

# UI -- eframe configured with default-features = false so we can opt into
# wayland only on desktop (wayland can't be linked on wasm).
eframe = { version = "0.34.1", default-features = false, features = ["accesskit", "default_fonts", "wgpu"] }
egui = "0.34.1"
egui-phosphor = "0.12.0"
egui_dock = { version = "0.19.1", features = ["serde"] }
egui_inbox = "0.11.0"
egui_taffy = "0.12.0"
wgpu = "29.0.1"

# Platform-neutral utilities
jiff = { version = "0.2.24", features = ["serde"] }
parking_lot = { version = "0.12.5", features = ["serde"] }
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sys-locale = "0.3.2"
thiserror = "2.0.18"
tracing = "0.1.44"
hxy-vfs.workspace = true
egui_ltreeview = "0.7.0"
egui_table = "0.8.0"
egui-palette = { workspace = true }

# Built-in 010 Editor Binary Template runtime -- linked as regular
# Rust instead of being wrapped in a WASM component. User-supplied
# template runtimes still go through wasmtime via hxy-plugin-host.
hxy-010-lang = { workspace = true }
suture = { version = "0.2.0", path = "../../../suture", features = ["serde", "blake3"] }
arboard = { version = "3.6.1", default-features = false }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
hxy-plugin-host = { workspace = true }
dirs = "6"
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.18"
objc2 = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlCanvasElement", "Document"], optional = true }
js-sys = { version = "0.3", optional = true }
tracing-wasm = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"], optional = true }
