[package]
name = "hxy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "hxy hex editor: desktop and web GUI for inspecting binary files."
readme = "README.md"
keywords = ["hex", "editor", "gui"]
categories = ["gui"]

[[bin]]
name = "hxy"
path = "src/main.rs"
required-features = ["desktop"]

# Lib target uses a distinct Rust crate name so the bin can
# `use hxy_lib::...` without colliding with its own target name.
# Having `[lib]` and `[[bin]]` share a name forces cargo to build
# two separate dep graphs, which ends up compiling `tokio` twice
# with different metadata and producing "two different versions of
# crate `tokio`" errors when the bin passes a lib-owned type back.
[lib]
name = "hxy_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = ["desktop"]
# Both desktop and wasm use eframe's wgpu renderer (WebGPU /
# WebGL fallback via wgpu-hal in the browser, native backends
# elsewhere) so the rendering path is identical across targets.
# `wayland` opts into winit's wayland backend on Linux only.
desktop = ["dep:tokio", "dep:sqlx", "dep:tracing-subscriber", "eframe/wayland", "eframe/wgpu"]
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:web-sys",
    "dep:js-sys",
    "dep:tracing-wasm",
    "dep:tracing-subscriber",
    "eframe/wgpu",
]
# dhat heap profiling. Off by default; build with
# `cargo run --features dhat --release` and set `HXY_DHAT_OUTPUT=/tmp/hxy.json`
# to record a heap profile that the dhat-rs viewer can load.
dhat = ["dep:dhat"]

[dependencies]
# Internal crates
hxy-core = { workspace = true }
hxy-i18n = { workspace = true }
hxy-view = { workspace = true, features = ["serde"] }
egui = { workspace = true }
egui-phosphor = "0.12.0"
egui_dock = { version = "0.19.1", features = ["serde"] }
egui_inbox = "0.11.0"
egui_taffy = "0.12.0"

# Platform-neutral utilities
jiff = { workspace = true }
parking_lot = { version = "0.12.5", features = ["serde"] }
rfd = "0.17.2"
serde = { workspace = true }
serde_json = "1.0.149"
sys-locale = "0.3.2"
thiserror = { workspace = true }
tracing = { workspace = true }
hxy-vfs.workspace = true
egui_ltreeview = "0.7.0"
egui_table = "0.8.0"
egui-palette = { workspace = true }
similar = { version = "3.1.0", default-features = false, features = ["bytes", "std"] }

# Built-in 010 Editor Binary Template + ImHex pattern-language
# runtimes -- both linked as regular Rust instead of being wrapped
# in a WASM component. User-supplied template runtimes still go
# through wasmtime via hxy-plugin-host.
hxy-010-lang = { workspace = true }
hxy-imhex-lang = { workspace = true }
hxy-calculator = { workspace = true }
suture = { workspace = true, features = ["serde", "blake3"] }
base64 = { workspace = true }
rkyv = { version = "0.8.16", default-features = false, features = ["alloc", "bytecheck"] }
egui-toast = "0.20.0"
fskit = { workspace = true }
egui_plot = "0.35"
dhat = { version = "0.3.3", optional = true }
# Visualizer renderers: `image` decodes PNG/JPEG/GIF/BMP/TIFF/WebP
# bytes for the `image` ImHex visualizer; `iced-x86` is the
# pure-Rust disassembler backing the `disassembler` visualizer
# (other ISAs are stubbed -- adding capstone would pull in C deps).
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "tiff", "webp"] }
iced-x86 = { version = "1.21", default-features = false, features = ["std", "decoder", "intel"] }
# Checksum tool: each crate exposes the same RustCrypto `Digest` API
# so the streaming-pass implementation can fan out to every selected
# algorithm uniformly. CRC32 sits outside the RustCrypto trait family
# but `crc32fast::Hasher` follows the same `update` + `finalize`
# shape so the dispatcher pays no overhead.
md-5 = "0.10"
sha1 = "0.10"
crc32fast = "1"
adler2 = "2"
# BLAKE3 used directly for: source-bytes fingerprints (snapshot,
# patch sidecar, watch), template-source fingerprints (run/restart
# match), and the visualizer-cache fingerprint that decides when to
# re-decode an image / rebuild a heatmap. The suture metadata schema
# still has its own `HashAlgorithm::Blake3` enum we feed into
# `SourceDigest::new`, but the compute itself goes through the
# standalone crate so we don't depend on suture re-exporting a
# `compute()` convenience.
blake3 = "1.8"
eframe = { version = "0.34.1", default-features = false, features = ["accesskit", "default_fonts"] }
sha2 = "0.11.0"
web-time = "1.1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# Pattern-corpus download flow: blocking reqwest + rustls keeps
# OpenSSL out of the build; called from a worker thread so the
# blocking part is fine. zip + sha2 unpack the master tarball
# and fingerprint it for the periodic-update check.
reqwest = { version = "0.13.3", default-features = false, features = ["blocking", "rustls"] }
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "sync", "time"], optional = true }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
hxy-plugin-host = { workspace = true }
dirs = "6"
tempfile = "3"
clap = { version = "4.6.1", features = ["derive"] }
interprocess = "2.4.2"
notify = "8"
notify-debouncer-full = "0.5"
crossbeam-channel = "0.5"
# arboard reads from the OS clipboard for Cmd+Shift+V (paste-as-hex);
# wasm has no platform backend so the dep is desktop-only and the
# `read_text` helper is `cfg(not(target_arch = "wasm32"))`-gated.
arboard = { version = "3.6.1", default-features = false }

[target.'cfg(target_os = "macos")'.dependencies]
muda = "0.18"
objc2 = "0.6"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
web-sys = { version = "0.3", features = ["Window", "Storage", "HtmlCanvasElement", "Document", "Element"], optional = true }
js-sys = { version = "0.3", optional = true }
tracing-wasm = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"], optional = true }
