[package]
name = "hxy-xbox-neighborhood"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
license = "MIT OR Apache-2.0"
description = "Discover Xbox 360 development kits over XBDM (NAP) and surface them in the command palette."

[lib]
crate-type = ["cdylib"]

[dependencies]
hxy-plugin-api = { path = "../../crates/hxy-plugin-api" }
# Sans-io NAP discovery + the async XBDM `Client` for typed
# commands and binary downloads (`Client::get_file` knows the
# ranged-getfile protocol natively, so we don't reimplement the
# 4-byte-length-prefix framing in the plugin). The async API is
# bridged to a blocking `std::net::TcpStream` via the local
# `BlockingTcp` shim plus `futures::executor::block_on` -- the
# shim's `poll_*` methods always return `Poll::Ready` because the
# underlying I/O really is blocking, so each `await` resolves in
# a single poll without any need for an actual executor reactor.
# `default-features = false` drops the tokio runner module
# (which can't compile on wasm32-wasip2 anyway).
xeedee = { path = "../../../xeedee/crates/xeedee", default-features = false }
futures-io = "0.3"
futures = { version = "0.3", default-features = false, features = ["executor"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Standalone workspace -- not pulled into the main hxy workspace so
# the host crates don't take a (transitive) build-time dependency on
# the plugin tree.
[workspace]
